# druks

./: .env.example  AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-release-images.yml  on-pull-request-frontend.yml  publish-sandbox-image.yml
backend/druks/: agents.py  alembic_support.py  bootstrap.py  database.py  doctor.py  exceptions.py  schemas.py  settings.py  setup_env.py  signals.py  workflows.py
backend/druks/accounts/: constants.py  context.py  dependencies.py  exceptions.py  jwt.py  models.py  routes.py  schemas.py  sessions.py
backend/druks/api/: agent.py  app.py  runs.py
backend/druks/core/: workflows.py
backend/druks/core/apis/: github.py
backend/druks/durable/: agent.py  dbos_state.py  exceptions.py  models.py  reads.py  schemas.py
backend/druks/extensions/: base.py  loader.py  registry.py
backend/druks/harnesses/: base.py  claude.py  codex.py  constants.py  datastructures.py  exceptions.py  models.py  registry.py  routes.py
backend/druks/mcp/: app.py  constants.py  enums.py  exceptions.py  helpers.py  models.py  oauth.py  registry.py  routes.py  schemas.py  trusted.json
backend/druks/mcp/gateway/: exceptions.py  routes.py  schemas.py  services.py
backend/druks/sandbox/: client.py  datastructures.py  gate.py  host.py
backend/druks/usage/: agent.py  reads.py  routes.py  schemas.py  trends.py
backend/druks/user_settings/: models.py  routes.py  schemas.py
backend/druks/webhooks/: deliveries.py
backend/migrations/: env.py
backend/migrations/versions/: 0ec9db44973e_personal_access_tokens.py  1ba6e314b314_baseline_schema.py  40cfd4c2aeee_baseline_schema.py  619e34746ef3_mcp_server_declared_headers.py  a8060465d9ed_accounts_and_seat_keyed_harness_logins.py  b3f1a9c47d20_drop_extension_config_snapshot.py  c6d7e8f9a0b1_attribute_agent_calls_to_accounts.py  d7e8f9a0b1c2_subject_keying_via_workflow_attributes.py  e8f9a0b1c2d3_rename_account_email_to_username.py  f0a1b2c3d4e5_harness_models_fetched.py  ff43df27a2e0_gate_answer_receipt.py
backend/tests/: conftest.py  test_accounts_migration.py  test_agent_routes.py  test_agent_services.py  test_agents.py  test_api_runs.py  test_api_settings.py  test_api_usage.py  test_api_work_items.py  test_attribution.py  test_auth.py  test_auth_boundary.py  test_auth_pats.py  test_author_surface.py  test_build_dispatch.py  test_build_durable.py  test_build_journal.py  test_build_plan_phase.py  test_build_prompts.py  test_build_workspace.py  test_contracts.py  test_core_workflows.py  test_durable_schemas.py  test_durable_sdk.py  test_extension_config.py  test_extensions.py  test_gate.py  test_gate_receipt.py  test_generic_subjects.py  test_github.py  test_harness_auth.py  test_harness_connect.py  test_harness_login.py  test_harness_login_persistence.py  test_harness_model_routing.py  test_harness_models_parsing.py  test_harness_reasoning_flags.py  test_identity.py  test_identity_jwt.py  test_journal.py  (+23 more)
backend/tests/druks-field_notes/druks_field_notes/: routes.py  workflows.py
deploy/: README.md  compose.yaml
deploy/caddy/: Caddyfile
deploy/sandbox/: Dockerfile
docs/: concepts.md  configuration.md  connect-your-agent.md  development.md  full-local.md  index.md  open-source-cut.md  releasing.md  troubleshooting.md  writing-an-extension.md
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  sse.test.tsx  sse.ts  types.ts
frontend/src/components/: AgentAccessPane.test.tsx  AuthProvider.test.tsx  AuthedApp.tsx  HarnessConnect.test.tsx  HarnessConnectFlow.tsx  HarnessLogin.tsx  IdentityBootstrap.test.tsx  IdentityBootstrap.tsx  Landing.test.tsx  Landing.tsx  Onboarding.test.tsx  Onboarding.tsx  SettingsModal.tsx
frontend/src/lib/: useUsage.ts
scripts/: _github_app_setup.py  deploy.sh  install.sh
